<resources>
    <string name="app_name">Knopka</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_knopka">Sign in to Knopka:</string>
    <string name="server_client_id">289368713312-voh4c314mqp5a8iini5e2esht1pes7t5.apps.googleusercontent.com</string>
    <string name="bio">bio</string>
    <string name="nickname">nickname</string>
    <string name="knopka_name">Knopka\'s name</string>
    <string name="knopka_description">Knopka\'s description</string>
    <string name="add_knopka">ADD KNOPKA</string>
    <string name="apply">apply</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="log_out">Log out</string>
    <string name="last_phrase_before_log_out">Do you want to log out?</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="feed">Feed</string>
    <string name="following">Followings</string>
    <string name="myProfile">My profile</string>
    <string name="searchIcon">Search</string>
    <string name="knopka_tags">Knopka\'s tags</string>
    <string name="add_friend">Add Friend</string>
    <string name="filterRegionIcon">Filter by region</string>

</resources>