<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".BioActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageViewProfilePic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bio_bar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/knopka_menu_24"
            app:collapseIcon="@drawable/knopka_log_out_24"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/Block_Bio"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePic"
        app:layout_constraintVertical_bias="0.18">

        <TextView
            android:id="@+id/textViewBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="11dp"
            android:gravity="center_vertical"
            android:hint="@string/bio"
            android:textColor="@color/white"
            android:textColorHint="#A3C5C5C5" />

        <RelativeLayout
            android:layout_width="74dp"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/changeInfoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/knopka_edit_24"
                app:backgroundTint="@color/white"
                app:iconTint="@color/white"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="108dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/nickname"
        android:textColor="@color/white"
        android:textColorHint="@color/TextHintColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Block_Bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePic" />

    <Button
        android:id="@+id/googleLogOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#373737"
        android:layout_marginTop="24dp"
        android:text="@string/log_out"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block_Bio"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewProfilePic"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:elevation="3dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewKnopkasFeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLogOutButton" />

    <Button
        android:id="@+id/addKnopkaButtton"

        style="@style/ButtonStyle_1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_knopka"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Block_Bio"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>